# SZ-Articles

./: .gitignore  Cargo.toml  database.sqlite  shell.nix
.devcontainer/: devcontainer.json
.sqlx/: query-1907c2949a858b97083e03f0143b746f71da342558d4fdde3c0acee106a69fb2.json  query-2769ae50bf47027201b5e86d9061b38408f87992372f43c85b616cd6957cf459.json  query-3b116aaf459522b79a6811e906884b5aa080a712c011ed227bb1d76d9c72dee1.json  query-5f859ff4b17dbd48f82c4785813f4af4a90171191db4514ba04269c73ee970cd.json  query-c9fed501929a82b4caab32c44eddf8c400f9e9dc8dcc7ee3373bbd219f0d58f5.json  query-d50468124e06673f8b83ff1d893e5566c9117e540993f7f3a0a51d8548e3bf61.json
migrations/: 20240517121011_init.down.sql  20240517121011_init.up.sql
src/: database.rs  main.rs
src/image/: mod.rs
src/user/: auth.rs  login.rs  mod.rs  password.rs  register.rs  validate.rs
