[package]
name = "sz-articles"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
jwt = "0.16.0"
regex = "1.10.4"
rocket = { version = "0.5.0", features = ["uuid", "json"] }
rocket-errors = { version = "0.1.0", default-features = false, features = [
    "eyre",
] }
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["uuid", "sqlite", "runtime-tokio"] }
tokio = "1.37.0"
uuid = "1.8.0"
